--- a/css/stylelanas.css
+++ b/css/stylelanas.css
@@ -64,7 +64,9 @@ nav a{
     text-decoration: none;
     color: #000000;
     border-radius: 8px;
-    padding: 15px;
+    font-size: 900;
+    font-weight: 600;
+    padding: 30px;
 }
 .container{
     display: flex;
@@ -100,4 +102,13 @@ nav a{
 }
 .producto a:hover{
     background-color: rgb(161, 112, 147);
+}
+footer{
+    display: flex;
+    justify-content: flex-end;
+}
+footer a {
+    margin-right: 10px;
+    text-decoration: none;
+    color: #000;
 }
